Refactored pagination handling to use Pagination DTO